[package]
name = "doggo"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
doc = false
name = "doggo"

[dependencies]
itertools = "0.12.0"
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
cargo-watch = "8.4.1"

[build-dependencies]
cfgrammar = "0.13"
lrlex = "0.13"
lrpar = "0.13"
